--- a/.github/workflows/javascript-lint.yml
+++ b/.github/workflows/javascript-lint.yml
@@ -27,6 +27,11 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
+      - name: Sync Submodules
+        run: |
+          git submodule sync --recursive
+          git submodule update --init --recursive
+
       - name: Cache dependencies
         uses: actions/cache@v3
         with:
