--- a/.github/workflows/javascript-lint.yml
+++ b/.github/workflows/javascript-lint.yml
@@ -29,8 +29,8 @@ jobs:
 
       - name: Sync Submodules
         run: |
-          git submodule update --init --recursive
-          git submodule sync --recursive
+          git pull --recurse-submodules
+          git submodule update --remote --recursive
 
       - name: Cache dependencies
         uses: actions/cache@v3
