MVP - homepage, upload, edit, tips, tasks, notifications, tests (#4)
* New plant form

* Task form WIP

* New task form

* Show and hide task form

* Task form improvements

* Plant edit WIP

* Load plant data to object

* Plant form logic WIP

* Added toasts and modals

* Plant form validator

* AppBar fix

* Plant form validator

* Update plant information

* Applied prettier

* Task card and form

* Fixed interval validation

* Photo upload

* Photo upload tweaks

* Fixed upload indicators

* Added plant save

* Added error handling

* Fixed lint errors

* Settings and tips

* Add plant filter

* Main page

* Notifications

* Removing notifications

* Added tasks

* Lint fixes

* Vercel adapter

* Fixed action

* Assets update

* Casting some git spells

* Submodule fix 3

* Submodule fix 4

* Assets update

* Assets fix

--- a/.github/workflows/javascript-lint.yml
+++ b/.github/workflows/javascript-lint.yml
@@ -1,4 +1,4 @@
-name: JavaScript Lint
+name: JavaScript Lint and Test
 
 on:
   pull_request:
@@ -27,6 +27,11 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
+      - name: Sync Submodules
+        run: |
+          git submodule sync --recursive
+          git submodule update --init --recursive
+
       - name: Cache dependencies
         uses: actions/cache@v3
         with:
@@ -44,3 +49,6 @@ jobs:
 
       - name: Run JS linter
         run: npm run lint
+
+      - name: Run Unit Tests
+        run: npm run test:unit
