--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 		"@playwright/test": "^1.28.1",
 		"@skeletonlabs/skeleton": "^1.2.0",
 		"@sveltejs/adapter-auto": "^2.0.0",
+		"@sveltejs/adapter-vercel": "^2.4.3",
 		"@sveltejs/kit": "^1.5.0",
 		"@tailwindcss/forms": "^0.5.3",
 		"@tailwindcss/typography": "^0.5.9",
@@ -40,6 +41,8 @@
 	},
 	"type": "module",
 	"dependencies": {
-		"firebase": "^9.21.0"
+		"@testing-library/svelte": "^3.2.2",
+		"firebase": "^9.21.0",
+		"happy-dom": "^9.10.9"
 	}
 }
